hphp/hack/test/typecheck/shape/shape_idx_optional_nullable_field_with_default_return.php.exp
File "shape_idx_optional_nullable_field_with_default_return.php", line 7, characters 10-33:
Invalid return type (Typing[4110])
File "shape_idx_optional_nullable_field_with_default_return.php", line 6, characters 4-6:
Expected int
File "shape_idx_optional_nullable_field_with_default_return.php", line 5, characters 17-20:
But got ?int
